Added includes to CMakeLists.txt for better project generation.

--- a/hugin/CMakeLists.txt
+++ b/hugin/CMakeLists.txt
@@ -1,4 +1,4 @@
-set (hugin_SOURCES
+set (HUGIN_SOURCE_FILES
     src/account_creation_screen.cpp
     src/active_encounter_view.cpp
     src/beast_editor.cpp
@@ -17,7 +17,30 @@ set (hugin_SOURCES
     src/wholist.cpp
 )
 
-add_library(hugin ${hugin_SOURCES})
+set (HUGIN_INCLUDE_FILES
+    include/hugin/account_creation_screen.hpp
+    include/hugin/active_encounter_view.hpp
+    include/hugin/beast_editor.hpp
+    include/hugin/bestiary_page.hpp
+    include/hugin/character_creation_screen.hpp
+    include/hugin/character_selection_screen.hpp
+    include/hugin/command_prompt.hpp
+    include/hugin/delete_confirmation_dialog.hpp
+    include/hugin/encounter_editor.hpp
+    include/hugin/encounters_page.hpp
+    include/hugin/export.hpp
+    include/hugin/gm_tools_screen.hpp
+    include/hugin/intro_screen.hpp
+    include/hugin/main_screen.hpp
+    include/hugin/password_change_screen.hpp
+    include/hugin/user_interface.hpp
+    include/hugin/wholist.hpp
+)
+
+add_library(hugin
+    ${HUGIN_SOURCE_FILES}
+    ${HUGIN_INCLUDE_FILES}
+)
     
 target_include_directories(hugin
     PUBLIC
