Updated Terminal++ and Telnet++ to v1.2.3
This also required some updates due to interface changes.
Also updated graphical characters to unicode due to Ubuntu 16.04
losing the SCO character set from its xterm.

--- a/munin/CMakeLists.txt
+++ b/munin/CMakeLists.txt
@@ -87,6 +87,7 @@ set (MUNIN_INCLUDE_FILES
     include/munin/vertical_strip_layout.hpp
     include/munin/view.hpp
     include/munin/viewport.hpp
+    include/munin/unicode_glyphs.hpp
     include/munin/window.hpp
     include/munin/text/default_multiline_document.hpp
     include/munin/text/default_singleline_document.hpp
