Update .travis.yml for Trusty.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,121 +1,200 @@
 language: cpp
-
 sudo: false
 
 compiler:
   - clang
 
-env:
-  - CONFIG=Release SHARED=1 CCOMPILE=clang CXXCOMPILE=clang++
-  - CONFIG=Release SHARED=0 CCOMPILE=clang CXXCOMPILE=clang++
-  - CONFIG=Debug SHARED=1 CCOMPILE=clang CXXCOMPILE=clang++
-  - CONFIG=Debug SHARED=0 CCOMPILE=clang CXXCOMPILE=clang++
-
-addons:
-  apt:
-    sources: &sources
-      - ubuntu-toolchain-r-test
-      - boost-latest
-    packages:
-      - clang
-      - gcc-4.8
-      - g++-4.8
-      - libcppunit-dev
-      - libgtest-dev
-      - libboost1.55-all-dev
-#      - libcrypto++-dev
-# Note: libcrypto++-dev is not yet whitelisted, nor usable in the packaged
-# version in Clang without editing a file (see below)
-
 matrix:
   include:
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - g++-5
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CONFIG=Debug && SHARED=0 && COVERAGE=ON"
 
-    # g++-5.2
-    - compiler: g++
-      env: CONFIG=Release SHARED=1 CCOMPILE=gcc-5 CXXCOMPILE=g++-5
-      addons:
-        apt:
-          sources: *sources
-          packages:
-            - clang
-            - gcc-5
-            - g++-5
-            - libcppunit-dev
-            - libgtest-dev
-            - libboost1.55-all-dev
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - g++-5
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CONFIG=Debug && SHARED=1"
 
-    - compiler: g++
-      env: CONFIG=Release SHARED=0 CCOMPILE=gcc-5 CXXCOMPILE=g++-5
-      addons:
-        apt:
-          sources: *sources
-          packages:
-            - clang
-            - gcc-5
-            - g++-5
-            - libcppunit-dev
-            - libgtest-dev
-            - libboost1.55-all-dev
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - g++-5
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CONFIG=Release && SHARED=0"
 
-    - compiler: g++
-      env: CONFIG=Debug SHARED=1 CCOMPILE=gcc-5 CXXCOMPILE=g++-5
-      addons:
-        apt:
-          sources: *sources
-          packages:
-            - clang
-            - gcc-5
-            - g++-5
-            - libcppunit-dev
-            - libgtest-dev
-            - libboost1.55-all-dev
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - g++-5
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CONFIG=Release && SHARED=1"
 
-    - compiler: g++
-      env: CONFIG=Debug SHARED=0 CCOMPILE=gcc-5 CXXCOMPILE=g++-5
-      addons:
-        apt:
-          sources: *sources
-          packages:
-            - clang
-            - gcc-5
-            - g++-5
-            - libcppunit-dev
-            - libgtest-dev
-            - libboost1.55-all-dev
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=0"
 
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=1"
+
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=0 && SANITIZE=address"
+
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=0 && SANITIZE=undefined"
+
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=0 && SANITIZE=thread"
+
+  - os: linux
+    dist: trusty
+    addons:
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-4.0
+        packages:
+          - clang-4.0
+          - libgtest-dev
+          - libboost1.55-all-dev
+    env:
+      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=0"
 cache:
   - apt: true
   - directories:
-      - cmake-3.4.0-Linux-x86_64
+    - lcov
+    - gtest
 
 before_install:
-# workaround for not having CMake 3.4
-  - if [ ! -d "cmake-3.4.0-Linux-x86_64/bin" ]; then
-      wget --no-check-certificate http://www.cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz;
-      tar -xzf cmake-3.4.0-Linux-x86_64.tar.gz;
+# Set up CC/CXX variables
+  - eval "${MATRIX_EVAL}"
+  - export CMAKE=cmake
+# workaround for not having lcov 1.13
+  - if [ ! -d "lcov/usr/local/bin/lcov" ]; then
+      wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.13.orig.tar.gz;
+      tar -xzf lcov_1.13.orig.tar.gz;
+      mkdir lcov || true;
+      DESTDIR=$HOME/lcov make -C lcov-1.13/ install;
     fi
-  - export CMAKE=../cmake-3.4.0-Linux-x86_64/bin/cmake
+  - export LCOV=$HOME/lcov/usr/local/bin/lcov
+# workaround for gtest not providing its own libraries (sigh)
+  - if [ ! -d "gtest/libgtest.a" ]; then
+      cd gtest;
+      CC=$CCOMPILE CXX=$CXXCOMPILE $CMAKE /usr/src/gtest -DCMAKE_CXX_FLAGS="-fPIC" && make;
+      cd ..;
+    fi
+  - export GTEST_ROOT=$PWD/gtest
+# install coverage software
+  - if [ "$COVERAGE" == "ON" ]; then gem install coveralls-lcov; fi
 # Install Crypto++, and fix the dependant-name bug
 #  - sudo apt-get install -y libcrypto++-dev
 #  - sudo sed -i 's/\tCheckSize/\tthis->CheckSize/g' /usr/include/cryptopp/secblock.h
 # workaround for gtest not providing its own libraries (sigh)
-  - mkdir gtest
-  - cd gtest
-  - CC=$CCOMPILE CXX=$CXXCOMPILE $CMAKE /usr/src/gtest && make
-  - export GTEST_ROOT=$PWD
-  - cd ..
 
 before_script:
-  - mkdir build
+  - mkdir build || true
   - cd build
-  - CC=$CCOMPILE CXX=$CXXCOMPILE $CMAKE -DCMAKE_BUILD_TYPE=$CONFIG -DBUILD_SHARED_LIBS=$SHARED ..
+  - $CMAKE -DCMAKE_BUILD_TYPE=$CONFIG -DBUILD_SHARED_LIBS=$SHARED -DPARADICE_SANITIZE=$SANITIZE -DPARADICE_COVERAGE=$COVERAGE ..
 
 script:
   - make -j2
+  - if [ "$COVERAGE" == "ON" ]; then
+        $LCOV --gcov-tool=gcov-5 --base-directory . --directory . --zerocounters -q;
+    fi
   - make test
 
 after_failure:
   - cat Testing/Temporary/LastTest.log
+
+after_success:
+  - if [ "$COVERAGE" == "ON" ]; then
+        $LCOV --gcov-tool=gcov-5 --base-directory . --directory .  --capture --output-file coverage.info;
+        $LCOV --gcov-tool=gcov-5 --remove coverage.info '*/test/*' '/usr/*' --output-file coverage.info;
+        $LCOV --gcov-tool=gcov-5 --list coverage.info;
+        coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info;
+    fi
 
 notifications:
   email:
