--- a/paradice9/CMakeLists.txt
+++ b/paradice9/CMakeLists.txt
@@ -19,11 +19,6 @@ target_include_directories(paradice9
         ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-target_compile_definitions(paradice9
-    PRIVATE
-        BOOST_SIGNALS_NO_DEPRECATION_WARNING
-)
-
 target_compile_features(paradice9
     PRIVATE
         cxx_generic_lambdas
@@ -33,8 +28,7 @@ target_link_libraries(paradice9
     PRIVATE
         paradice
         hugin
-        ${Boost_FILESYSTEM_LIBRARY}
-        ${Boost_PROGRAM_OPTIONS_LIBRARY}
-        ${Boost_SYSTEM_LIBRARY}
-        ${CMAKE_THREAD_LIBS_INIT}
+        CONAN_PKG::boost_asio
+        CONAN_PKG::boost_filesystem
+        CONAN_PKG::boost_program_options
 )
