Updated for latest conan packages.

--- a/paradice/CMakeLists.txt
+++ b/paradice/CMakeLists.txt
@@ -79,11 +79,10 @@ target_link_libraries(paradice
     PUBLIC
         CONAN_PKG::terminalpp
         CONAN_PKG::serverpp
-        CONAN_PKG::boost_uuid
+        CONAN_PKG::boost
     PRIVATE
         CONAN_PKG::cryptopp
         CONAN_PKG::munin
-        CONAN_PKG::boost_format
         CONAN_PKG::telnetpp
 )
 
