Introduced main page.

--- a/paradice/CMakeLists.txt
+++ b/paradice/CMakeLists.txt
@@ -12,7 +12,7 @@ if (PARADICE9_USE_CONAN)
     )
 else()
     find_package(terminalpp REQUIRED)
-    find_package(munin REQUIRED)
+    find_package(munin 0.3.11 REQUIRED)
     find_package(serverpp REQUIRED)
     find_package(telnetpp REQUIRED)
     find_package(Boost COMPONENTS container program_options REQUIRED)
@@ -64,6 +64,7 @@ set (PARADICE_SOURCE_FILES
     src/ui/account_creation_page.cpp
     src/ui/character_creation_page.cpp
     src/ui/character_selection_page.cpp
+    src/ui/main_page.cpp
     src/ui/title_page.cpp
     src/ui/user_interface.cpp
 )
@@ -97,6 +98,7 @@ set (PARADICE_INCLUDE_FILES
     include/paradice/ui/account_creation_page.hpp
     include/paradice/ui/character_creation_page.hpp
     include/paradice/ui/character_selection_page.hpp
+    include/paradice/ui/main_page.hpp
     include/paradice/ui/title_page.hpp
     include/paradice/ui/user_interface.hpp
 )
