--- a/paradice/CMakeLists.txt
+++ b/paradice/CMakeLists.txt
@@ -10,7 +10,7 @@ if (PARADICE9_USE_CONAN)
     )
 else()
     find_package(terminalpp 2.2.0 REQUIRED)
-    find_package(munin 0.3.11 REQUIRED)
+    find_package(munin 0.6.1 REQUIRED)
     find_package(telnetpp REQUIRED)
     find_package(Boost COMPONENTS container program_options REQUIRED)
     find_package(gsl-lite 0.34 REQUIRED)
@@ -56,6 +56,7 @@ set (PARADICE_SOURCE_FILES
     src/ui/account_creation_page.cpp
     src/ui/character_creation_page.cpp
     src/ui/character_selection_page.cpp
+    src/ui/command_prompt.cpp
     src/ui/main_page.cpp
     src/ui/title_page.cpp
     src/ui/user_interface.cpp
@@ -92,6 +93,7 @@ set (PARADICE_INCLUDE_FILES
     include/paradice/ui/account_creation_page.hpp
     include/paradice/ui/character_creation_page.hpp
     include/paradice/ui/character_selection_page.hpp
+    include/paradice/ui/command_prompt.hpp
     include/paradice/ui/main_page.hpp
     include/paradice/ui/title_page.hpp
     include/paradice/ui/user_interface.hpp
