--- a/paradice/CMakeLists.txt
+++ b/paradice/CMakeLists.txt
@@ -9,11 +9,11 @@ if (PARADICE9_USE_CONAN)
         CONAN_PKG::telnetpp
     )
 else()
-    find_package(terminalpp 2.2.0 REQUIRED)
-    find_package(munin 0.6.1 REQUIRED)
+    find_package(terminalpp 2.4.0 REQUIRED)
+    find_package(munin 0.7.0 REQUIRED)
     find_package(telnetpp REQUIRED)
-    find_package(Boost COMPONENTS container program_options REQUIRED)
-    find_package(gsl-lite 0.34 REQUIRED)
+    find_package(Boost COMPONENTS program_options container REQUIRED)
+    find_package(gsl-lite 0.38 REQUIRED)
     find_package(nlohmann_json REQUIRED)
     find_package(fmt REQUIRED)
     find_package(ZLIB REQUIRED)
