--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,12 @@ jobs:
       run: |
         sudo apt-add-repository ppa:mhier/libboost-latest
         sudo apt install libboost1.74-dev
+
+    - name: Install Crypto++ and libfmt
+      shell: bash
+      run: |
+        sudo apt install libcrypto++-dev
+        sudo apt install libfmt-dev
       
     - name: Install dependencies from source
       run: .ci/fetch_system_dependencies.sh
