--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,9 @@ jobs:
         sudo apt-add-repository ppa:mhier/libboost-latest
         sudo apt install libboost1.74-dev
 
-    - name: Install Crypto++ and libfmt
+    - name: Install libfmt
       shell: bash
       run: |
-        sudo apt install libcrypto++-dev
         sudo apt install libfmt-dev
       
     - name: Install dependencies from source
