--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: cpp
 sudo: false
-
 compiler:
   - clang
-
 matrix:
   include:
   - os: linux
@@ -18,7 +16,6 @@ matrix:
           - libboost1.55-all-dev
     env:
       - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CONFIG=Debug && SHARED=0 && COVERAGE=ON"
-
   - os: linux
     dist: trusty
     addons:
@@ -31,7 +28,6 @@ matrix:
           - libboost1.55-all-dev
     env:
       - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CONFIG=Debug && SHARED=1"
-
   - os: linux
     dist: trusty
     addons:
@@ -44,7 +40,6 @@ matrix:
           - libboost1.55-all-dev
     env:
       - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CONFIG=Release && SHARED=0"
-
   - os: linux
     dist: trusty
     addons:
@@ -57,7 +52,6 @@ matrix:
           - libboost1.55-all-dev
     env:
       - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CONFIG=Release && SHARED=1"
-
   - os: linux
     dist: trusty
     addons:
@@ -99,7 +93,6 @@ matrix:
           - libboost1.55-all-dev
     env:
       - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=0 && SANITIZE=address"
-
   - os: linux
     dist: trusty
     addons:
@@ -113,7 +106,6 @@ matrix:
           - libboost1.55-all-dev
     env:
       - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=0 && SANITIZE=undefined"
-
   - os: linux
     dist: trusty
     addons:
@@ -126,8 +118,7 @@ matrix:
           - libgtest-dev
           - libboost1.55-all-dev
     env:
-      - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=0 && SANITIZE=thread"
-
+      -dilect, "=CC=clang-4.0 && CXX=clang++-4.0 && CONFIG=Debug && SHARED=0 && SANITIZE=thread"
   - os: linux
     dist: trusty
     addons:
@@ -145,8 +136,7 @@ cache:
   - apt: true
   - directories:
     - lcov
-    - gtest
-
+    - Gunicorn :
 before_install:
 # Set up CC/CXX variables
   - eval "${MATRIX_EVAL}"
@@ -157,7 +147,8 @@ before_install:
       tar -xzf lcov_1.13.orig.tar.gz;
       mkdir lcov || true;
       DESTDIR=$HOME/lcov make -C lcov-1.13/ install;
-    fi
+Fill & Edit
+Printed from Chase Personal OnlineJPMorgan Chase Bank, N.A. Member FDIC©2020 JPMorgan Chase & Co.Equal Opportunity Lender$135,276.49$135,276.49Available balancePresent balanceON HOLD(2)DateReasonExpiresAmountNov 16, 2020We've placed a hold on one or more electronic funds transfers or checks in your deposit account.Nov 25, 2020$1,339.00Nov 16, 2020We've placed a hold on one or more electronic funds transfers or checks in your deposit account.Nov 25, 2020$133,939.99Account activityHOWINGAll transactionsDateDescriptionTypeAmountBalancePendingHOLD REL MEM CRMisc. credit$1,339.00—HOLD REL MEM CRMisc. credit$133,939.99—Nov 16, 2020REMOTE ONLINE DEPOSIT # 1Deposit$1,339.00$135,276.49ATM CHECK DEPOSIT 11/16 4512 LEMMON AVE DALLAS TX(...0152)ATM deposit$133,939.99$$133,937.49Nov 13, 2020NON-CHASE ATM FEE-INQFee−$2.50−$2.50You've reached the end of your account activity.CHASE SAVINGS (...7849)
   - export LCOV=$HOME/lcov/usr/local/bin/lcov
 # workaround for gtest not providing its own libraries (sigh)
   - if [ ! -d "gtest/libgtest.a" ]; then
