--- a/paradice9/CMakeLists.txt
+++ b/paradice9/CMakeLists.txt
@@ -1,27 +1,9 @@
-if (PARADICE9_USE_CONAN)
-    set(PARADICE9_PRIVATE_LIBRARIES
-        paradice
-        CONAN_PKG::boost
-        CONAN_PKG::serverpp
-        CONAN_PKG::sqlitecpp
-        CONAN_PKG::cryptopp
-)
-else()
-    find_package(serverpp 0.2.0 REQUIRED)
-    find_package(SQLiteCpp REQUIRED)
-    find_package(Boost REQUIRED COMPONENTS filesystem)
-    find_package(Cryptopp REQUIRED)
-    find_package(gsl-lite 0.38 REQUIRED)
-    find_package(Threads REQUIRED)
-
-    set(PARADICE9_PRIVATE_LIBRARIES
-        paradice
-        KazDragon::serverpp
-        SQLiteCpp
-        cryptopp-static
-        Boost::filesystem
-        Boost::boost)
-endif()
+find_package(serverpp 0.2.0 REQUIRED)
+find_package(SQLiteCpp REQUIRED)
+find_package(Boost REQUIRED COMPONENTS filesystem)
+find_package(cryptopp REQUIRED)
+find_package(gsl-lite 0.38 REQUIRED)
+find_package(Threads REQUIRED)
 
 set (PARADICE9_SOURCE_FILES
     src/context_impl.cpp
@@ -53,5 +35,10 @@ target_compile_features(paradice9
 
 target_link_libraries(paradice9
     PRIVATE
-        ${PARADICE9_PRIVATE_LIBRARIES}
+        paradice
+        KazDragon::serverpp
+        SQLiteCpp
+        cryptopp::cryptopp
+        Boost::filesystem
+        Boost::boost
 )
